Fix podcast images

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -7,9 +7,68 @@ permalink: "/moro-and-mike"
     <div class="row justify-content-center">
         <div class="col-md-8">
         <h1 class="font-weight-bold title h6 text-uppercase mb-4">Moro and Mike</h1>
-		<p>
+		<p>"Moro and Mike" is a weekly livestream discussing the cybersecurity profession practice. Our topics includes leadership, management, job hunting, career development, emotional intelligence, threat intelligence, situational awareness and more. We go beyond the technology to discuss the professional practice of cybersecurity and IT.</p>
+		
+		<h2 class="font-weight-bold spanborder" id="future-topics">Future Topics</h2>
+		<table>
+		  <tr>
+		    <th>Date</th>
+			<th>Topic</th>
+			<th>Guests</th>
+		  </tr>
+		  <tr>
+		    <td>2020-07-30</td>
+			<td>Threat Intelligence</td>
+			<td>Alec Mather-Shapiro and Chris McNeil</td>
+		  </tr>
+		  <tr>
+		    <td>2020-08-06</td>
+			<td>Rejection: It's not the end of the world and how to deal with it</td>
+			<td>TBD</td>
+		  </tr>
+		  <tr>
+		    <td>2020-08-13</td>
+			<td>Futurism: When will the future arrive</td>
+			<td>Warren Lafountain</td>
+		  </tr>
+		  <tr>
+		    <td>2020-08-20</td>
+			<td>Mentorship: What it means to be a mentor or a protege</td>
+			<td>TBD</td>
+		  </tr>
+		  <tr>
+		    <td>2020-08-27</td>
+			<td>Mentorship: Finding a mentor</td>
+			<td>TBD</td>
+		  </tr>
+		  <tr>
+		    <td>2020-09-03</td>
+			<td>TBD</td>
+			<td>TBD</td>
+		  </tr>
+		  <tr>
+		    <td>2020-09-10</td>
+			<td>Management: Is it for you? Do you have what it takes?</td>
+			<td>TBD</td>
+		  </tr>
+ 		  <tr>
+		    <td>2020-09-17</td>
+			<td>Mentorship: Peer-mentorship and your team</td>
+			<td>TBD</td>
+		  </tr>
+		  <tr>
+		    <td>2020-09-24</td>
+			<td>Leadership: Being a great boss</td>
+			<td>TBD</td>
+		  </tr>
+		  <tr>
+		    <td>2020-10-01</td>
+			<td>TBD</td>
+			<td>TBD</td>
+		  </tr>
+		</table>
 
-        <h4 class="font-weight-bold spanborder" id="moro-and-mike"><span>Upcoming and Past Livestreams</span></h4>
+        <h4 class="font-weight-bold spanborder" id="livestreams"><span>Upcoming and Past Livestreams</span></h4>
         {% assign pages_list = 'Moro and Mike' %}
         {% for post in pages_list %}
         {% if post.title != null %}
