Fix podcast images

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -10,6 +10,7 @@ permalink: "/moro-and-mike"
 		<p>"Moro and Mike" is a weekly livestream discussing the cybersecurity profession practice. Our topics includes leadership, management, job hunting, career development, emotional intelligence, threat intelligence, situational awareness and more. We go beyond the technology to discuss the professional practice of cybersecurity and IT.</p>
 		
 		<h2 class="font-weight-bold spanborder" id="future-topics">Future Topics</h2>
+		<p>This is a tentative list of future livestreams. Some guests are still TBD. Please contact us if you or someone you know might be a great guest for one of these topics.</p>
 		<table>
 		  <tr>
 		    <th>Date</th>
