Fix podcast images

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -1,7 +1,7 @@
 ---
 title: "Moro and Mike"
 layout: default
-permalink: "/moro-and-mike"
+permalink: "/moro-and-mike/about"
 ---
 <div class="container">
     <div class="row justify-content-center">
@@ -68,6 +68,10 @@ permalink: "/moro-and-mike"
 			<td>TBD</td>
 		  </tr>
 		</table>
+
+
+        <h4 class="font-weight-bold spanborder" id="livestreams"><span>Podcasts</span></h4>
+		<p>Moro and Mike is recorded live on YouTube, but past episodes are available in podcast (audio-only) format on iTunes, Spotify, and Google Podcasts. Search for "Moro and Mike".</p>
 
         <h4 class="font-weight-bold spanborder" id="livestreams"><span>Upcoming and Past Livestreams</span></h4>
         {% assign pages_list = 'Moro and Mike' %}
