Fix podcast images

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -13,7 +13,7 @@ permalink: "/moro-and-mike/about"
 		<p>This is a tentative list of future livestreams. Some guests are still TBD. Please contact us if you or someone you know might be a great guest for one of these topics.</p>
 		<table>
 		  <tr>
-		    <th>Date</th>
+		    <th style="white-space:nowrap">Date</th>
 			<th>Topic</th>
 			<th>Guests</th>
 		  </tr>
