Fix podcast images

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -18,54 +18,54 @@ permalink: "/moro-and-mike/about"
 			<th>Guests</th>
 		  </tr>
 		  <tr>
-		    <td>2020-07-30</td>
-			<td>Threat Intelligence</td>
-			<td>Alec Mather-Shapiro and Chris McNeil</td>
+		    <td style="vertical-align:top;">2020-07-30</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Threat Intelligence</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Alec Mather-Shapiro and Chris McNeil</td style="vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td>2020-08-06</td>
-			<td>Rejection: It's not the end of the world and how to deal with it</td>
-			<td>TBD</td>
+		    <td style="vertical-align:top;">2020-08-06</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Rejection: It's not the end of the world and how to deal with it</td style="vertical-align:top;">
+			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td>2020-08-13</td>
-			<td>Futurism: When will the future arrive</td>
-			<td>Warren Lafountain</td>
+		    <td style="vertical-align:top;">2020-08-13</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Futurism: When will the future arrive</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Warren Lafountain</td style="vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td>2020-08-20</td>
-			<td>Mentorship: What it means to be a mentor or a protege</td>
-			<td>TBD</td>
+		    <td style="vertical-align:top;">2020-08-20</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Mentorship: What it means to be a mentor or a protege</td style="vertical-align:top;">
+			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td>2020-08-27</td>
-			<td>Mentorship: Finding a mentor</td>
-			<td>TBD</td>
+		    <td style="vertical-align:top;">2020-08-27</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Mentorship: Finding a mentor</td style="vertical-align:top;">
+			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td>2020-09-03</td>
-			<td>TBD</td>
-			<td>TBD</td>
+		    <td style="vertical-align:top;">2020-09-03</td style="vertical-align:top;">
+			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
+			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td>2020-09-10</td>
-			<td>Management: Is it for you? Do you have what it takes?</td>
-			<td>TBD</td>
+		    <td style="vertical-align:top;">2020-09-10</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Management: Is it for you? Do you have what it takes?</td style="vertical-align:top;">
+			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
 		  </tr>
  		  <tr>
-		    <td>2020-09-17</td>
-			<td>Mentorship: Peer-mentorship and your team</td>
-			<td>TBD</td>
+		    <td style="vertical-align:top;">2020-09-17</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Mentorship: Peer-mentorship and your team</td style="vertical-align:top;">
+			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td>2020-09-24</td>
-			<td>Leadership: Being a great boss</td>
-			<td>TBD</td>
+		    <td style="vertical-align:top;">2020-09-24</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Leadership: Being a great boss</td style="vertical-align:top;">
+			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td>2020-10-01</td>
-			<td>TBD</td>
-			<td>TBD</td>
+		    <td style="vertical-align:top;">2020-10-01</td style="vertical-align:top;">
+			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
+			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
 		  </tr>
 		</table>
 
