Fix podcast images

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -20,7 +20,7 @@ permalink: "/moro-and-mike/about"
 		  <tr>
 		    <td style="vertical-align:top;">2020-07-30</td style="vertical-align:top;">
 			<td style="vertical-align:top;">Threat Intelligence</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Alec Mather-Shapiro and Chris McNeil</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Alec&nbsp;Mather-Shapiro and Chris&nbsp;McNeil</td style="vertical-align:top;">
 		  </tr>
 		  <tr>
 		    <td style="vertical-align:top;">2020-08-06</td style="vertical-align:top;">
@@ -30,7 +30,7 @@ permalink: "/moro-and-mike/about"
 		  <tr>
 		    <td style="vertical-align:top;">2020-08-13</td style="vertical-align:top;">
 			<td style="vertical-align:top;">Futurism: When will the future arrive</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Warren Lafountain</td style="vertical-align:top;">
+			<td style="vertical-align:top;">Warren&nbsp;Lafountain</td style="vertical-align:top;">
 		  </tr>
 		  <tr>
 		    <td style="vertical-align:top;">2020-08-20</td style="vertical-align:top;">
