Fix podcast images

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -71,8 +71,9 @@ permalink: "/moro-and-mike/about"
 		<p>&nbsp;</p>
 
 
-        <h4 class="font-weight-bold spanborder" id="livestreams"><span>Podcasts</span></h4>
+        <h4 class="font-weight-bold spanborder" id="livestreams">Podcasts</h4>
 		<p>Moro and Mike is recorded live on YouTube, but past episodes are available in podcast (audio-only) format on iTunes, Spotify, and Google Podcasts. Search for "Moro and Mike".</p>
+		<p>&nbsp;</p>
 
         <h4 class="font-weight-bold spanborder" id="livestreams"><span>Upcoming and Past Livestreams</span></h4>
         {% assign pages_list = 'Moro and Mike' %}
