Fix podcast images

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -11,7 +11,7 @@ permalink: "/moro-and-mike/about"
 		
 		<h2 class="font-weight-bold spanborder" id="future-topics">Future Topics</h2>
 		<p>This is a tentative list of future livestreams. Some guests are still TBD. Please contact us if you or someone you know might be a great guest for one of these topics.</p>
-		<table>
+		<table border="1">
 		  <tr>
 		    <th style="white-space:nowrap; width:7em;">Date</th>
 			<th>Topic</th>
@@ -69,7 +69,6 @@ permalink: "/moro-and-mike/about"
 		  </tr>
 		</table>
 		<p>&nbsp;</p>
-
 
         <h4 class="font-weight-bold spanborder" id="livestreams">Podcasts</h4>
 		<p>Moro and Mike is recorded live on YouTube, but past episodes are available in podcast (audio-only) format on iTunes, Spotify, and Google Podcasts. Search for "Moro and Mike".</p>
