--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -11,7 +11,7 @@ permalink: "/moro-and-mike/about"
 		
 		<h2 class="font-weight-bold spanborder" id="future-topics">Future Topics</h2>
 		<p>This is a tentative list of future livestreams. Some guests are still TBD. Please contact us if you or someone you know might be a great guest for one of these topics.</p>
-		<table border="1">
+		<table style="border: 1px solid black; padding-left: 0.5em;">
 		  <tr>
 		    <th style="white-space:nowrap; width:7em;">Date</th>
 			<th>Topic</th>
