Fix podcast images

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -13,7 +13,7 @@ permalink: "/moro-and-mike/about"
 		<p>This is a tentative list of future livestreams. Some guests are still TBD. Please contact us if you or someone you know might be a great guest for one of these topics.</p>
 		<table style="border: 1px; padding-left: 0.5em;">
 		  <tr>
-		    <th style="white-space:nowrap; width:6em;">Date</th>
+		    <th style="white-space:nowrap; width:7em;">Date</th>
 			<th>Topic</th>
 			<th>Guests</th>
 		  </tr>
@@ -71,7 +71,7 @@ permalink: "/moro-and-mike/about"
 		<p>&nbsp;</p>
 
         <h4 class="font-weight-bold spanborder" id="livestreams">Podcasts</h4>
-		<p>Moro and Mike is recorded live on YouTube, but past episodes are available in podcast (audio-only) format on iTunes, Spotify, and Google Podcasts. Search for "Moro and Mike".</p>
+		<p>Moro and Mike is recorded live on YouTube, but past episodes are available in podcast (audio-only) format on <a href="https://podcasts.apple.com/ca/podcast/moro-and-mike/id1523514571">iTunes</a>, <a href="https://open.spotify.com/show/0YK3VLKedbZ3YZyj33v7Cq?si=PtWdFp3ATJ21jhnp3TRvdw">Spotify</a>, and <a href="https://podcasts.google.com/feed/aHR0cHM6Ly93d3cuY3liZXJsaWJyYXJpYW4uY2EvbW9yby1hbmQtbWlrZS9wb2RjYXN0LnJzcw?sa=X&ved=0CAYQrrcFahcKEwi4zImFw-TqAhUAAAAAHQAAAAAQAQ">Google Podcasts</a>. Search for "Moro and Mike".</p>
 		<p>&nbsp;</p>
 
         <h4 class="font-weight-bold spanborder" id="livestreams"><span>Upcoming and Past Livestreams</span></h4>
