--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -11,61 +11,61 @@ permalink: "/moro-and-mike/about"
 		
 		<h2 class="font-weight-bold spanborder" id="future-topics">Future Topics</h2>
 		<p>This is a tentative list of future livestreams. Some guests are still TBD. Please contact us if you or someone you know might be a great guest for one of these topics.</p>
-		<table style="border: 1px; padding-left: 0.5em;">
+		<table style="border: 1px solid black; border-collapse: collapse; padding-left: 0.5em;">
 		  <tr>
-		    <th style="white-space:nowrap; width:7em;">Date</th>
-			<th>Topic</th>
-			<th>Guests</th>
+		    <th style="border: 1px solid black; white-space:nowrap; width:7em;">Date</th style="border: 1px solid black;">
+			<th style="border: 1px solid black;">Topic</th style="border: 1px solid black;">
+			<th style="border: 1px solid black;">Guests</th style="border: 1px solid black;">
 		  </tr>
 		  <tr>
-		    <td style="vertical-align:top;">2020-07-30</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Threat Intelligence</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Alec&nbsp;Mather-Shapiro and Chris&nbsp;McNeil</td style="vertical-align:top;">
+		    <td style="border: 1px solid black; vertical-align:top;">2020-07-30</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">Threat Intelligence</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">Alec&nbsp;Mather-Shapiro and Chris&nbsp;McNeil</td style="border: 1px solid black; vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td style="vertical-align:top;">2020-08-06</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Rejection: It's not the end of the world and how to deal with it</td style="vertical-align:top;">
-			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
+		    <td style="border: 1px solid black; vertical-align:top;">2020-08-06</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">Rejection: It's not the end of the world and how to deal with it</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">TBD</td style="border: 1px solid black; vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td style="vertical-align:top;">2020-08-13</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Futurism: When will the future arrive</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Warren&nbsp;Lafountain</td style="vertical-align:top;">
+		    <td style="border: 1px solid black; vertical-align:top;">2020-08-13</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">Futurism: When will the future arrive</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">Warren&nbsp;Lafountain</td style="border: 1px solid black; vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td style="vertical-align:top;">2020-08-20</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Mentorship: What it means to be a mentor or a protege</td style="vertical-align:top;">
-			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
+		    <td style="border: 1px solid black; vertical-align:top;">2020-08-20</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">Mentorship: What it means to be a mentor or a protege</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">TBD</td style="border: 1px solid black; vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td style="vertical-align:top;">2020-08-27</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Mentorship: Finding a mentor</td style="vertical-align:top;">
-			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
+		    <td style="border: 1px solid black; vertical-align:top;">2020-08-27</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">Mentorship: Finding a mentor</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">TBD</td style="border: 1px solid black; vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td style="vertical-align:top;">2020-09-03</td style="vertical-align:top;">
-			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
-			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
+		    <td style="border: 1px solid black; vertical-align:top;">2020-09-03</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">TBD</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">TBD</td style="border: 1px solid black; vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td style="vertical-align:top;">2020-09-10</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Management: Is it for you? Do you have what it takes?</td style="vertical-align:top;">
-			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
+		    <td style="border: 1px solid black; vertical-align:top;">2020-09-10</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">Management: Is it for you? Do you have what it takes?</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">TBD</td style="border: 1px solid black; vertical-align:top;">
 		  </tr>
  		  <tr>
-		    <td style="vertical-align:top;">2020-09-17</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Mentorship: Peer-mentorship and your team</td style="vertical-align:top;">
-			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
+		    <td style="border: 1px solid black; vertical-align:top;">2020-09-17</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">Mentorship: Peer-mentorship and your team</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">TBD</td style="border: 1px solid black; vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td style="vertical-align:top;">2020-09-24</td style="vertical-align:top;">
-			<td style="vertical-align:top;">Leadership: Being a great boss</td style="vertical-align:top;">
-			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
+		    <td style="border: 1px solid black; vertical-align:top;">2020-09-24</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">Leadership: Being a great boss</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">TBD</td style="border: 1px solid black; vertical-align:top;">
 		  </tr>
 		  <tr>
-		    <td style="vertical-align:top;">2020-10-01</td style="vertical-align:top;">
-			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
-			<td style="vertical-align:top;">TBD</td style="vertical-align:top;">
+		    <td style="border: 1px solid black; vertical-align:top;">2020-10-01</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">TBD</td style="border: 1px solid black; vertical-align:top;">
+			<td style="border: 1px solid black; vertical-align:top;">TBD</td style="border: 1px solid black; vertical-align:top;">
 		  </tr>
 		</table>
 		<p>&nbsp;</p>
