Fix podcast images

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -11,7 +11,7 @@ permalink: "/moro-and-mike/about"
 		
 		<h2 class="font-weight-bold spanborder" id="future-topics">Future Topics</h2>
 		<p>This is a tentative list of future livestreams. Some guests are still TBD. Please contact us if you or someone you know might be a great guest for one of these topics.</p>
-		<table style="border: 1px solid black; border-collapse: collapse; padding-left: 0.5em;">
+		<table style="border: 1px solid black; border-collapse: collapse; padding: 0.5em;">
 		  <tr>
 		    <th style="border: 1px solid black; white-space:nowrap; width:7em;">Date</th style="border: 1px solid black;">
 			<th style="border: 1px solid black;">Topic</th style="border: 1px solid black;">
