Update rel-me links again.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@ description: "Enabling Cybersecurity Learners"
     <div class="col-md-6">
         <div class="row align-items-center mb-5">
             <div class="col-md-9">
-                <h2 class="font-weight-bold">{{page.title}}<span class="small btn btn-outline-success btn-sm btn-round"><a href="{{site.authors.michael.twitter}}">Follow</a></span></h2>
+                <h2 class="font-weight-bold">{{page.title}}<span class="small btn btn-outline-success btn-sm btn-round"><a href="{{site.authors.michael.mastodon}}">Follow</a></span></h2>
                 <p><a rel="me" href="{{site.authors.michael.site}}">{{site.authors.michael.site}}</a></p>
-                <p><a rel="me" href="{{site.authors.michael.linkedin}}">{{site.authors.michael.linkedin}}</a></p>
                 <p><a rel="me" href="{{site.authors.michael.github}}">{{site.authors.michael.github}}</a></p>
                 <p><a rel="me" href="{{site.authors.michael.youtube}}">{{site.authors.michael.youtube}}</a></p>
                 <p><a rel="me" href="{{site.authors.michael.mastodon}}">{{site.authors.michael.mastodon}}</a></p>
