Added featured-side-bar back

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -25,5 +25,8 @@ permalink: "/moro-and-mike/about"
         {% assign pages_list = nil %}
         {% assign group = nil %}
         </div>
+	<div class="col-md-4">
+        {% include sidebar-featured.html %}    
+        </div>	   
     </div>
 </div>
