Fixed card loop

--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -14,15 +14,15 @@ permalink: "/moro-and-mike/about"
 		<p>&nbsp;</p>
 
         <h4 class="font-weight-bold spanborder" id="livestreams"><span>Past Livestreams</span></h4>
-        {% assign pages_list = 'Moro and Mike' %}
-        {% for post in pages_list %}
+        {% assign posts = site.posts | where:"authors","moro" %}
+        {% for post in posts %}
         {% if post.title != null %}
           {% if group == null or group == post.group %}         
             {% include main-loop-card.html %}
           {% endif %}
         {% endif %}
         {% endfor %}
-        {% assign pages_list = nil %}
+        {% assign posts = nil %}
         {% assign group = nil %}
         </div>
 	<div class="col-md-4">
