--- a/_pages/moro-and-mike.html
+++ b/_pages/moro-and-mike.html
@@ -18,15 +18,12 @@ permalink: "/moro-and-mike/about"
         {% for post in posts %}
         {% if post.title != null %}
           {% if group == null or group == post.group %}         
-            {% include main-loop-card.html %}
+          - {% post.title %}
           {% endif %}
         {% endif %}
         {% endfor %}
         {% assign posts = nil %}
         {% assign group = nil %}
         </div>
-	<div class="col-md-4">
-        {% include sidebar-featured.html %}    
-        </div>	   
     </div>
 </div>
